# cdh-data-pipeline

./: .env.example  .gitignore  README.md  prek.toml  pyproject.toml
recipes/: glw4.py  mapspam.py
recipes/examples/: berkeley_tavg.py
src/cdh_data_pipeline/: __init__.py  cog.py  dataverse.py  recipe.py  storage.py  zarr.py
