[project]
name = "cdh-data-pipeline"
version = "0.1.0"
description = "Shared plumbing + recipes for turning source datasets into ARCO zarr + COGs"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Brayden Youngberg", email = "bjyberg1@gmail.com" }]
# floors = versions this was developed + tested against (uv.lock pins exact);
# zarr>=3.2 is a hard requirement -- v3 sharding + BloscCodec + ObjectStore.
dependencies = [
    "dask>=2025.1.0",
    "geozarr-toolkit>=0.1.2,<0.2",  # pre-1.0 spec tool -> cap the minor
    "obstore>=0.9.0",
    "rasterio>=1.4.0",
    "rioxarray>=0.18.0",
    "topozarr>=0.1.2,<0.2",  # multiscale pyramids (Rust kernel); pre-1.0 -> cap the minor
    "xproj>=0.1.0",  # CRS accessor topozarr reads (ds.proj.assign_crs)
    "xarray>=2025.1.0",
    "zarr>=3.2.0",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "prek>=0.4.5",
    "pytest>=9.1.0",
    "ruff>=0.15.18",
    "ty>=0.0.52",
]

[tool.ruff.lint]
extend-select = ["I"]  # import sorting

[tool.ruff.lint.isort]
known-first-party = ["cdh_data_pipeline"]
